--- a/game_page.html
+++ b/game_page.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Math Quiz</title>
+	<title>Guess The Word</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
 <link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
-	<h4 id="player1name"></h4> <span id="player1score"></span> <br> 
-	<h4 id="player2name"></h4> <span id="player2score"></span>
+
+<h4 id="player1_name"></h4> <span id="player1_score"></span>
+<br>
+<h4 id="player2_name"></h4> <span id="player2_score"></span>
+
 <div class="container">
 	<center>
-		<h2 style="color: white;">Solve The sum !</h2>
-<h3 id="player_quit"></h3>
-<h3 id="player_ans"></h3>
-<div id="output" class="col-lg-6"></div>
+		<h2 style="color: white;">The Math Quiz Game!</h2>
+		<h3 id="player_question"></h3>
+		<h3 id="player_answer"></h3>
+		<div id="output" class="col-lg-6"> </div>
 		<br>
 		<br>
-
-		<label>Send You Word: <b style="color: red">Try putting word which has 5 or more alphabet</b></label>
-
+		<h4>Number 1</h4>
+		<input type="text" id="number1" class="form-control" placeholder="Number 1">
 		<br>
-<input type="number" id="word" class="form-control" placeholder="number-1">
-<br>
-<input type="number" id="word" class="form-control" placeholder="number-2">
-<br>
-<button class="btn btn-success" onclick="send()">send</button>
+		<h4>Number 1</h4>
+		<input type="text" id="number2" class="form-control" placeholder="Number 2">
+		<br>
+		<button onclick="send()" class="btn btn-success" style="width: 30%;">Send</button>
 	</center>
 </div>
 
-<script src="game_page.js"></script>
+<script src="quiz_game_page.js"></script>
 </body>
 </html>
